<resources>
    <string name="app_name">Map Librarian</string>
    <string name="content_description_add">Add new</string>
    <string name="login">Log In</string>
    <string name="user_avatar_content_description">User avatar</string>
    <string name="sign_out">Sign out</string>
    <string name="hint_email">Email address</string>
    <string name="hint_password">Password</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="primary_action">Primary Action</string>
    <string name="sign_up">Sign Up</string>
</resources>
